objects/nSBA__Change_Of_Ownership__c.object
<CustomObject>
    <fields>
        <fullName>nSBA__Application__c</fullName>
        <description>The Loan Application for which change of ownership details are required.</description>
        <label>Application</label>
        <referenceTo>LLC_BI__Application__c</referenceTo>
        <relationshipLabel>Change Of Ownerships</relationshipLabel>
        <relationshipName>Change_Of_Ownerships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>nSBA__Appr_Value_WO_Real_Estate_And_Equipment__c</fullName>
        <description>Business valuation value exclusive of the appraised value of real estate and equipment. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Business valuation value exclusive of the appraised value of real estate and equipment. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Appr Value WO Real Estate And Equipment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Appraiser_Fee__c</fullName>
        <description>Appraiser Fee</description>
        <inlineHelpText>Appraiser Fee</inlineHelpText>
        <label>Appraiser Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Appraiser_Name__c</fullName>
        <description>Name of Business Appraiser (person)</description>
        <inlineHelpText>Name of Business Appraiser (person)</inlineHelpText>
        <label>Appraiser Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Appraiser_Qualification_ABV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Appraiser is Accredited in Business Valuation (ABV)</description>
        <inlineHelpText>Indicates if Appraiser is Accredited in Business Valuation (ABV)</inlineHelpText>
        <label>Appraiser Qualification ABV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Appraiser_Qualification_ASA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Appraiser is an Accredited Senior Appraiser (ASA)</description>
        <inlineHelpText>Indicates if Appraiser is an Accredited Senior Appraiser (ASA)</inlineHelpText>
        <label>Appraiser Qualification ASA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Appraiser_Qualification_AVA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Appraiser is an Accredited Valuation Analyst (AVA)</description>
        <inlineHelpText>Indicates if Appraiser is an Accredited Valuation Analyst (AVA)</inlineHelpText>
        <label>Appraiser Qualification AVA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Appraiser_Qualification_CBA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Appraiser is a Certified Business Appraiser (CBA)</description>
        <inlineHelpText>Indicates if Appraiser is a Certified Business Appraiser (CBA)</inlineHelpText>
        <label>Appraiser Qualification CBA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Appraiser_Qualification_CPA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Appraiser is a Certified Public Accountant (CPA)</description>
        <inlineHelpText>Indicates if Appraiser is a Certified Public Accountant (CPA)</inlineHelpText>
        <label>Appraiser Qualification CPA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Appraiser_Qualification_CVA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Appraiser is a Certified Valuation Analyst (CVA)</description>
        <inlineHelpText>Indicates if Appraiser is a Certified Valuation Analyst (CVA)</inlineHelpText>
        <label>Appraiser Qualification CVA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Borrower_Equity_Amount__c</fullName>
        <description>Buyer’s Equity Contribution - Borrowed</description>
        <inlineHelpText>Buyer’s Equity Contribution - Borrowed</inlineHelpText>
        <label>Borrower Equity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Broker_Address__c</fullName>
        <description>Broker&apos;s Address.</description>
        <inlineHelpText>Broker&apos;s Address.</inlineHelpText>
        <label>Broker Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Broker_Commission__c</fullName>
        <description>Broker Commission Amount.</description>
        <inlineHelpText>Broker Commission Amount.</inlineHelpText>
        <label>Broker Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Broker_Name__c</fullName>
        <description>Name of Business Broker (person) if broker has received a commission from the sale of the business.</description>
        <inlineHelpText>Name of Business Broker (person) if broker has received a commission from the sale of the business.</inlineHelpText>
        <label>Broker Name</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Broker_Representative__c</fullName>
        <description>Name of Business Broker Representative if broker has received a commission from the sale of the business.</description>
        <inlineHelpText>Name of Business Broker Representative if broker has received a commission from the sale of the business.</inlineHelpText>
        <label>Broker Representative</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Buyer_Equity_Cash_Description__c</fullName>
        <description>Description of buyer’s equity contribution in cash.</description>
        <inlineHelpText>Description of buyer’s equity contribution in cash.</inlineHelpText>
        <label>Buyer Equity Cash Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Buyer_Equity_Cash__c</fullName>
        <description>Buyer’s equity contribution in cash.</description>
        <inlineHelpText>Buyer’s equity contribution in cash.</inlineHelpText>
        <label>Buyer Equity Cash</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Client_List_Value__c</fullName>
        <description>Intangible Assets - Customer/client list value.</description>
        <inlineHelpText>Intangible Assets - Customer/client list value.</inlineHelpText>
        <label>Client List Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__External_Evaluation_Not_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if external business evaluation is not required for this business purchase financed by SBA loan</description>
        <inlineHelpText>Indicates if external business evaluation is not required for this business purchase financed by SBA loan</inlineHelpText>
        <label>Ext. Business Evaluation Not Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Franchise_Value__c</fullName>
        <description>Intangible Assets - Franchise rights, patents, trademarks, etc. value.</description>
        <inlineHelpText>Intangible Assets - Franchise rights, patents, trademarks, etc. value.</inlineHelpText>
        <label>Franchise Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Goodwill_Value__c</fullName>
        <description>Intangible Assets - Goodwill value.</description>
        <inlineHelpText>Intangible Assets - Goodwill value.</inlineHelpText>
        <label>Goodwill Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Is_Broker_Commission__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether Broker is taking a commission or not.</description>
        <inlineHelpText>Indicates whether Broker is taking a commission or not.</inlineHelpText>
        <label>Is Broker Commission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__License_Value__c</fullName>
        <description>Intangible Assets - License (liquor, FCC, etc.) value.</description>
        <inlineHelpText>Intangible Assets - License (liquor, FCC, etc.) value.</inlineHelpText>
        <label>License Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Machinery_Equipment_Evaluation_Type__c</fullName>
        <description>Identifies if assets purchased - Machinery and Equipment is Appraised or Book value</description>
        <inlineHelpText>Identifies if assets purchased - Machinery and Equipment is Appraised or Book value</inlineHelpText>
        <label>Machinery Equipment Evaluation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nSBA__Non_Complete_Value__c</fullName>
        <description>Intangible Assets - Covenant not to compete value.</description>
        <inlineHelpText>Intangible Assets - Covenant not to compete value.</inlineHelpText>
        <label>Non Complete Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Other_Equity_Amount__c</fullName>
        <description>Amount of other buyer’s equity contribution.</description>
        <inlineHelpText>Amount of other buyer’s equity contribution.</inlineHelpText>
        <label>Other Equity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Other_Equity_Description__c</fullName>
        <description>Description of other buyer’s equity contribution.</description>
        <inlineHelpText>Description of other buyer’s equity contribution.</inlineHelpText>
        <label>Other Equity Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Other_Intangibles_Description__c</fullName>
        <description>Description of Other Intangible Assets</description>
        <inlineHelpText>Description of Other Intangible Assets</inlineHelpText>
        <label>Other Intangibles Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Other_Intangibles_Value__c</fullName>
        <description>Other Intangible Assets Value.</description>
        <inlineHelpText>Other Intangible Assets Value.</inlineHelpText>
        <label>Other Intangibles Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Purchased_Business_Name__c</fullName>
        <description>Name of Business that is being purchased with this loan. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Name of Business that is being purchased with this loan. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Purchased Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Real_Estate_Evaluation_Type__c</fullName>
        <description>Identifies if assets purchased - Real Estate Amount is Appraised or Book value</description>
        <inlineHelpText>Identifies if assets purchased - Real Estate Amount is Appraised or Book value</inlineHelpText>
        <label>Real Estate Evaluation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nSBA__Seller_Finance_Full_Standby__c</fullName>
        <description>Indicates sum of all seller financing on full standby for at least 2 yr.</description>
        <inlineHelpText>Indicates sum of all seller financing on full standby for at least 2 yr.</inlineHelpText>
        <label>Seller Finance Full Standby</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Seller_Finance_Not_Full_Standby__c</fullName>
        <description>Indicates sum of all seller financing not on full standby.</description>
        <inlineHelpText>Indicates sum of all seller financing not on full standby.</inlineHelpText>
        <label>Seller Finance Not Full Standby</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Total_Accounts_Receivable__c</fullName>
        <description>Assets purchased - Accounts Receivable Amount</description>
        <inlineHelpText>Assets purchased - Accounts Receivable Amount</inlineHelpText>
        <label>Total Accounts Receivable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Total_Appraised_Value__c</fullName>
        <description>Appraiser’s Conclusion or Summary of Value</description>
        <inlineHelpText>Appraiser’s Conclusion or Summary of Value</inlineHelpText>
        <label>Total Appraised Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Total_Furniture_Fixtures__c</fullName>
        <description>Furniture and Fixtures Amount</description>
        <inlineHelpText>Furniture and Fixtures Amount</inlineHelpText>
        <label>Total Furniture Fixtures</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Total_Intangible_Assets__c</fullName>
        <description>The dollar amount of Intangible Assets.</description>
        <formula>nSBA__Non_Complete_Value__c + nSBA__Client_List_Value__c + nSBA__License_Value__c + nSBA__Franchise_Value__c + nSBA__Goodwill_Value__c + nSBA__Other_Intangibles_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The dollar amount of Intangible Assets.</inlineHelpText>
        <label>Total Intangible Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Total_Inventory__c</fullName>
        <description>Assets purchased - Inventory Amount</description>
        <inlineHelpText>Assets purchased - Inventory Amount</inlineHelpText>
        <label>Total Inventory</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Total_Machinery_Equipment__c</fullName>
        <description>Machinery and Equipment Amount</description>
        <inlineHelpText>Machinery and Equipment Amount</inlineHelpText>
        <label>Total Machinery Equipment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Total_Other_Assets_Description__c</fullName>
        <description>Description of Other Assets purchased.</description>
        <inlineHelpText>Description of Other Assets purchased.</inlineHelpText>
        <label>Total Other Assets Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Total_Other_Assets__c</fullName>
        <description>Other Assets (Amount)</description>
        <inlineHelpText>Other Assets (Amount)</inlineHelpText>
        <label>Total Other Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Total_Real_Estate__c</fullName>
        <description>Assets purchased - Real Estate Amount</description>
        <inlineHelpText>Assets purchased - Real Estate Amount</inlineHelpText>
        <label>Total Real Estate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Change Of Ownership</label>
    <nameField>
        <label>Change Of Ownership Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Change Of Ownerships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>